[gd_scene load_steps=2 format=3 uid="uid://cxmpqw665hmoh"]

[ext_resource type="Script" path="res://assets/scenes/ui/item_interact_popup.gd" id="1_s53qx"]

[node name="ItemInteractPopup" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s53qx")

[node name="PanelContainerKey" type="PanelContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 70.0

[node name="LabelKey" type="Label" parent="PanelContainerKey"]
offset_top = 12.0
offset_right = 50.0
offset_bottom = 38.0
text = "E"

[node name="PanelContainerValue" type="PanelContainer" parent="."]
offset_left = 80.0
offset_top = 20.0
offset_right = 280.0
offset_bottom = 70.0

[node name="LabelValue" type="Label" parent="PanelContainerValue"]
offset_top = 13.0
offset_right = 200.0
offset_bottom = 36.0
